<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9e9e9"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="20dip"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_name"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:hint="@string/name_or_email" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/txt_forget_password"
            android:layout_width="fill_parent"
            android:layout_height="35dip"
            android:gravity="center_vertical|right"
            android:text="@string/forget_password" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:background="@drawable/btn_blue"
            android:text="@string/login"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:background="@drawable/btn_green"
            android:text="@string/new_account"
            android:textColor="#fff" />
    </LinearLayout>

</LinearLayout>