<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9e9e9"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="10dip"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_old_pwd"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:hint="@string/old_pwd"
            android:inputType="textPassword"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_new_pwd"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_marginTop="10dip"
            android:hint="@string/new_pwd"
            android:inputType="textPassword"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_comfirm_pwd"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_marginTop="10dip"
            android:hint="@string/comfirm_pwd"
            android:inputType="textPassword"
            android:singleLine="true" />
    </LinearLayout>

</LinearLayout>