<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9e9e9"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="10dip"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_name"
            android:layout_marginTop="10dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/food_name" />

        <EditText
            android:id="@+id/et_portion"
            android:layout_marginTop="10dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_number"
                android:layout_width="180dip"
                android:layout_height="wrap_content"
                android:hint="@string/number"
                android:inputType="text|number" />
            
            <Spinner 
                android:id="@+id/spinner"
                android:layout_marginTop="1dip"
                android:layout_width="120dip"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <EditText
            android:id="@+id/et_kcal"
            android:layout_marginTop="10dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/food_kcal"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/et_type"
            android:layout_marginTop="10dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type" />

    </LinearLayout>

</LinearLayout>