<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9e9e9"
     android:scrollbars="@null"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dip"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_thumbnail"
                android:layout_width="72dip"
                android:layout_height="72dip"
                android:layout_centerInParent="true"
                android:contentDescription="@null"
                android:src="@drawable/default_thumbnail" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_name"
                android:layout_width="fill_parent"
                android:layout_height="55dip"
                android:gravity="center"
                android:hint="@string/name"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_birthday"
                android:layout_width="fill_parent"
                android:layout_height="55dip"
                android:gravity="center"
                android:hint="@string/birthday"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_high"
                android:layout_width="fill_parent"
                android:layout_height="55dip"
                android:gravity="center"
                android:hint="@string/height"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="55dip"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/iv_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/photo"
                    android:src="@drawable/male_tab_selected" />

                <ImageView
                    android:id="@+id/iv_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/photo"
                    android:src="@drawable/female_tab" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/divider_greyline"
                android:contentDescription="@null" />

            <EditText
                android:id="@+id/et_weight"
                android:layout_width="fill_parent"
                android:layout_height="55dip"
                android:gravity="center"
                android:hint="@string/weight"
                android:inputType="numberDecimal"
                android:singleLine="true" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>