<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9e9e9"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="20dip"
        android:background="#fff"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_food_type"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:drawableRight="@drawable/details_large"
            android:gravity="center_vertical"
            android:padding="10dip"
            android:text="@string/types_food" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/divider_greyline" />

        <TextView
            android:id="@+id/txt_serving_reference"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:drawableRight="@drawable/details_large"
            android:gravity="center_vertical"
            android:padding="10dip"
            android:text="@string/serving_reference" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/divider_greyline" />

        <TextView
            android:id="@+id/txt_follow_us"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:drawableRight="@drawable/details_large"
            android:gravity="center_vertical"
            android:padding="10dip"
            android:text="@string/follow_us" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/divider_greyline" />

        <TextView
            android:id="@+id/txt_disclaimer_note"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:drawableRight="@drawable/details_large"
            android:gravity="center_vertical"
            android:padding="10dip"
            android:text="@string/disclaimer_note" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/divider_grey_top" />
    </LinearLayout>

</LinearLayout>