<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9e9e9"
    android:orientation="vertical"
    android:scrollbars="@null" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dip"
            android:src="@drawable/title_ideal"
            android:contentDescription="@null" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/divider_greyline"
            android:contentDescription="@null" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip" >

            <TextView
                android:id="@+id/txt_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/standard_weight" />

            <TextView
                android:id="@+id/txt_standard_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/divider_grey_top"
            android:contentDescription="@null" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip" >

            <TextView
                android:id="@+id/txt_reset_pwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:text="@string/body_fat" />

            <TextView
                android:id="@+id/txt_body_fat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/divider_grey_top"
            android:contentDescription="@null" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/lean_musde" />

            <TextView
                android:id="@+id/txt_lean_musde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/divider_grey_top"
            android:contentDescription="@null" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/body_age" />

            <TextView
                android:id="@+id/txt_body_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/divider_grey_top"
            android:contentDescription="@null" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/visceral_fat" />

            <TextView
                android:id="@+id/txt_visceral_fat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/divider_grey_top"
            android:contentDescription="@null" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/bmi" />

            <TextView
                android:id="@+id/txt_bmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/divider_grey_top"
            android:contentDescription="@null" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/bmr" />

            <TextView
                android:id="@+id/txt_bmr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/divider_grey_top"
            android:contentDescription="@null" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/kcal" />

            <TextView
                android:id="@+id/txt_kcal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/divider_grey_top"
            android:contentDescription="@null" />
    </LinearLayout>

</ScrollView>